# trainkit

./: .gitignore  .releaserc.yml  .rsyncignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release-please.yaml  release.yml  tests.yaml  tests.yml
release/: update_version.py
tests/: test_trainer.py  test_trainer_fit.py  utils.py
tests/configs/: config.yaml
tests/configs/experiments/: exp_fit.yaml
tests/configs/hyper_params/lr_scheduler/: clr.yaml  rop.yaml
tests/configs/run_params/: default.yaml
tests/configs/run_params/enqueue/: rq_plugin.yaml
trainkit/: __init__.py
trainkit/core/: data.py  logger.py  losses.py  lr_finder.py  lr_scheduler.py  metrics.py  models.py  trainer.py
trainkit/datasets/: __init__.py  audio.py  audio_mixins.py  base.py  image.py  image_mixins.py  properties.py
trainkit/queueing/: init_worker.py  job_maker.py  make_job.py  utils.py
trainkit/static/: .env  .rq_worker.env  conda-env.yaml  eda.ipynb  run.py  setup_train.py
trainkit/static/configs/: config.yaml
trainkit/static/configs/experiments/: exp0.yaml
trainkit/static/configs/hyper_params/lr_scheduler/: none.yaml  null.yaml  one_cycle.yaml  rop.yaml
trainkit/static/configs/run_params/: default.yaml
trainkit/static/configs/run_params/enqueue/: enqueue.yaml  rq_custom.yaml
trainkit/templates/: .rq_worker.env  run.py
trainkit/tmp/: check_find_lr.py  data.py  default_config.yaml  models.py  rq_conf.yaml  run.py  run_soundscapes.py
trainkit/tmp/configs/: config.yaml
trainkit/tmp/configs/experiments/: exp0.yaml
trainkit/tmp/configs/hyper_params/lr_scheduler/: clr.yaml
trainkit/tmp/configs/run_params/: default.yaml  enqueue.yaml
trainkit/utils/: conf_parser.py  hydra_conf_parser.py  make_proj_tree.py  make_project_tree.py  neptune_import.py  prepare_project_tree.py  trainer_utils.py
