[metadata]
name = trainkit
version = attr: trainkit.__version__
url = https://github.com/vlipper/trainkit
author = Ignat Legeza

[options]
python_requires = ~=3.8
install_requires =
    albumentations
    hydra-core
    librosa
    matplotlib
    numpy
    opencv-python-headless
    python-dotenv
    PyYAML
    redis
    rq
    scikit-learn
    scipy
    tensorboard
    torch
    tqdm
packages = find:
include_package_data = True

[options.extras_require]
checks = pydocstyle; pylint
neptune = neptune-client
tests = pytest

[options.packages.find]
exclude =
    tests

[pydocstyle]
ignore = D1
convention = google

[pylint.format]
disable =
    invalid-name,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring

[tool:pytest]
addopts = --basetemp=./pytest-logs/
log_cli = True
log_cli_level = INFO
